cgu text-decoration-color compatibility

--- a/cgu/index.html
+++ b/cgu/index.html
@@ -133,7 +133,7 @@
         </p>
     </header>
     <section id="informations-legales">
-        <h2 class="text-small-header"><a href="#informations-legales">INFORMATIONS LEGALES</a></h2>
+        <h2 class="text-small-header"><a href="#informations-legales"><span>INFORMATIONS LEGALES</span></a></h2>
         <h3 class="text-card-title">Propriétaire et Editeur du site:</h3>
         <p class="text-min-body">
             Société SAS <strong class="text-strong-word">Econ'home Energie</strong>  au capital de 5000 euros, immatriculée au <abbr title="Registre du Commerce et des Sociétés" class="text-strong-word">RCS</abbr> de Toulouse sous le numéro <a href="tel:881521454" class="text-hyperlink">881521454</a>, dont le siège social est situé au 5 rue de la palanquette 31830 Plaisance-du-Touch.<br/>
@@ -151,7 +151,7 @@
         </p>
     </section>
     <section id="cgu">
-        <h2 class="text-small-header"><a href="#cgu">CONDITIONS GENERALES D’UTILISATION DU SITE</a></h2>
+        <h2 class="text-small-header"><a href="#cgu"><span>CONDITIONS GENERALES D’UTILISATION DU SITE</span></a></h2>
         <h3 class="text-card-title">Propriété intellectuelle:</h3>
         <p class="text-min-body">
             Conformément aux dispositions en vigueur de la loi française, l’intégralité de la structure et du contenu du site(logos, images, textes, articles, documents, vidéos, services, etc.) sont la propriété exclusive de l’Editeur ou de ses partenaires.<br/>
@@ -170,7 +170,7 @@
         </p>
     </section>
     <section id="rgpd">
-        <h2 class="text-small-header"><a href="#rgpd">Politique de protection des données personnelles(«<abbr title="Règlement Général européen sur la Protection des Données à caractère personnel" class="text-strong-word">RGPD</abbr>»)</a></h2>
+        <h2 class="text-small-header"><a href="#rgpd"><span>Politique de protection des données personnelles(«<abbr title="Règlement Général européen sur la Protection des Données à caractère personnel" class="text-strong-word">RGPD</abbr>»)</span></a></h2>
         <p class="text-min-body">
             La présente politique de confidentialité a pour objectif d’informer <strong class="text-strong-word">l'Utilisateur</strong> sur les modalités de traitement de ses données dans le respect de l’article 13 du Règlement Général européen sur la Protection des Données à caractère personnel n°2016/679 du 27 avril 2016(le «<abbr title="Règlement Général européen sur la Protection des Données à caractère personnel" class="text-strong-word">RGPD</abbr>»).
         </p>
@@ -237,7 +237,7 @@
         </p>
     </section>
     <section id="acces-au-site">
-        <h2 class="text-small-header"><a href="#acces-au-site">Accès au site</a></h2>
+        <h2 class="text-small-header"><a href="#acces-au-site"><span>Accès au site</span></a></h2>
         <p class="text-min-body">
             <p class="text-min-body">
                 Le site <a href="https://www.meeco.fr" class="text-hyperlink">www.meeco.fr</a> permet à <strong class="text-strong-word">l'Utilisateur</strong> un accès gratuit aux services suivants:<br/> <!-- manque de contenu -->
@@ -254,7 +254,7 @@
         </p>
     </section>
     <section id="droit-applicable-et-juridiction-competente">
-        <h2 class="text-small-header"><a href="#droit-applicable-et-juridiction-competente">Droit applicable et juridiction compétente</a></h2>
+        <h2 class="text-small-header"><a href="#droit-applicable-et-juridiction-competente"><span>Droit applicable et juridiction compétente</span></a></h2>
         <p class="text-min-body">
             La législation française s'applique au présent contrat. En cas d'absence de résolution amiable d'un litige né entre les parties, les tribunaux français seront seuls compétents pour en connaître.<br/>
             Pour toute question relative à l’application des présentes <abbr title="Conditions générales d'utilisation" class="text-strong-word">CGU</abbr>, vous pouvez joindre l’éditeur aux coordonnées inscrites à l’ARTICLE 1.            
