collected data keys: names instead of numbers

--- a/app/app-10.html
+++ b/app/app-10.html
@@ -1,6 +1,6 @@
 <div id="app-10" class="radio-choices" name="isolation_plancher" data-title="Quel est le type de votre sous-sol?" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="50" data-evident_next_page="12">
     <ul class="choices-box">
-        <li class="choice radio-choice" value="terre-plain" data-order="1" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
+        <li class="choice radio-choice" value="terre-plein" data-order="1" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
             <span class="choice-image" data-image_src="terre-plein"></span>
             <span class="choice-caption text-clickable">Terre-plein</span>
         </li>
