--- a/app/app-21.html
+++ b/app/app-21.html
@@ -1,10 +1,10 @@
 <div id="app-21" class="radio-choices" name="eligibilite_duree_logement" data-title="Veuillez sélectionner la durée de votre logement" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="14" data-evident_next_page="22">
     <ul class="choices-box">
-        <li class="choice radio-choice" value="+2ans" data-order="1" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
+        <li class="choice radio-choice" value="plus-2-ans" data-order="1" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
             <span class="choice-image" data-image_src="+2ans"></span>
             <span class="choice-caption text-clickable">Plus de 2 ans</span>
         </li>
-        <li class="choice radio-choice" value="-2ans" data-order="2" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
+        <li class="choice radio-choice" value="moins-2-ans" data-order="2" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
             <span class="choice-image" data-image_src="-2ans"></span>
             <span class="choice-caption text-clickable">Moins de 2 ans</span>
         </li>
