--- a/index.html
+++ b/index.html
@@ -126,32 +126,32 @@
 <header id="page-heading" class="page-section" tabindex="0">
     <div id="content-box-heading" class="content-box-page-section">
         <h1 id="heading-title" class="text-page-title">La rénovation énergétique <br/>de votre foyer n'a jamais été aussi simple</h1>
-        <p id="heading-body" class="text-title-body">Jusqu'à 100 % de vos travaux financés grâce à MEECO.</p>
-        <a id="cta-heading-link" class="text-button button button-primary-special-private" href="app/"  target="_blank" aria-label="Réaliser mon projet" tabindex="0">Réaliser mon projet</a>
+        <p id="heading-body" class="text-title-body">Jusqu'à 100 % de vos travaux financés grâce à Meeco.</p>
+        <a id="cta-heading-link" class="text-button button button-primary-special-private" href="./app/"  target="_blank" aria-label="Réaliser mon projet" tabindex="0">Réaliser mon projet</a>
     </div>
 </header>
 <section id="values-intro-section" class="page-section" tabindex="0">
     <div id="content-box-values-intro" class="content-box-page-section">
         <h2 id="values-intro-title" class="text-big-header section-title">Effectuer vos travaux d'économies d'énergie en toute simplicité par les ⭐ meilleurs artisans proches de chez vous.</h2>
-        <img id="values-intro-house" src="images/visuals/maison.svg" alt="introduction illustration maison"/>
-        <img id="values-intro-circle" src="images/visuals/circle.svg" alt="introduction illustration cercle"/>
+        <img id="values-intro-house" src="./images/visuals/maison.svg" alt="introduction illustration maison"/>
+        <img id="values-intro-circle" src="./images/visuals/circle.svg" alt="introduction illustration cercle"/>
     </div>
 </section>
 <section id="values-section" class="page-section" tabindex="0">
     <div id="content-box-values" class="content-box-page-section">
         <ul id="values-list">
             <li class="values-list-item">
-                <img src="images/visuals/economie-illustration.svg" class="card-image" alt="économie-illustration"/>
+                <img src="./images/visuals/economie-illustration.svg" class="card-image" alt="économie-illustration"/>
                 <h3 class="values-list-item-title text-card-title">Maîtriser, pour réduire sa consommation énergétique</h3>
                 <p class="values-list-item-description text-card-body">Moins gâchée pour moins dépenser, avec la mise en place d’actions concrètes qui vont vous aider à maîtriser et réduire votre consommation d’énergie.</p>
             </li>
             <li class="values-list-item">
-                <img src="images/visuals/ecologie-illustration.svg" class="card-image" alt="écologie-illustration"/>
+                <img src="./images/visuals/ecologie-illustration.svg" class="card-image" alt="écologie-illustration"/>
                 <h3 class="values-list-item-title text-card-title">Une habitation écologique est toujours économique </h3>
                 <p class="values-list-item-description text-card-body">En gardant votre confort, votre habitation devient beaucoup moins énergivore et votre empreinte écologique diminue avec zéro pollution.</p>
             </li>
             <li class="values-list-item">
-                <img src="images/visuals/confort-illustration.svg" class="card-image" alt="confort-illustration"/>
+                <img src="./images/visuals/confort-illustration.svg" class="card-image" alt="confort-illustration"/>
                 <h3 class="values-list-item-title text-card-title">Assurez-vous une vie pleine de confort dans votre maison</h3>
                 <p class="values-list-item-description text-card-body">Améliorer le confort thermique de votre logement en bénéficiant d’une température agréable hiver comme été.</p>
             </li>
@@ -163,19 +163,19 @@
         <h2 id="services-section-title" class="text-big-header section-title">Nous vous proposons des travaux de renovation énergetique de qualité.</h2>
         <ul id="services-section-list">
             <li class="services-section-list-item">
-                <img src="images/visuals/isolation-illustration.svg" class="card-image" alt="isolation-illustration"/>
+                <img src="./images/visuals/isolation-illustration.svg" class="card-image" alt="isolation-illustration"/>
                 <h3 class="services-section-list-item-title text-card-title">Isoler mon logement </h3>
                 <p class="services-section-list-item-description text-card-body">Je veux isoler ma maison et réduire les pertes de chaleur. </p>
                 <a href="./isolation/" class="services-section-list-item-link text-clickable button button-primary-normal-public" aria-label="En savoir plus" tabindex="0";>En savoir plus</a>
             </li>
             <li class="services-section-list-item">
-                <img src="images/visuals/chauffage-illustration.svg" class="card-image" alt="chauffage-illustration"/>
+                <img src="./images/visuals/chauffage-illustration.svg" class="card-image" alt="chauffage-illustration"/>
                 <h3 class="services-section-list-item-title text-card-title">Changer mon chauffage</h3>
                 <p class="services-section-list-item-description text-card-body">Votre maison sera moins énergivore avec nos produits.</p>
                 <a href="./chauffage/" class="services-section-list-item-link text-clickable button button-primary-normal-public" aria-label="En savoir plus" tabindex="0">En savoir plus</a>
             </li>
             <li class="services-section-list-item">
-                <img src="images/visuals/electricite-illustration.svg" class="card-image" alt="énergie-illustration"/>
+                <img src="./images/visuals/electricite-illustration.svg" class="card-image" alt="énergie-illustration"/>
                 <h3 class="services-section-list-item-title text-card-title">Produire ma propre énergie</h3>
                 <p class="services-section-list-item-description text-card-body">Je veux produire ma propre énergie avec des panneaux solaires.</p>
                 <a href="./energie/" class="services-section-list-item-link text-clickable button button-primary-normal-public" aria-label="En savoir plus" tabindex="0">En savoir plus</a>
@@ -280,7 +280,7 @@
 </section>
 <footer id="page-footer" class="page-section" tabindex="0">
     <div id="content-box-footer" class="content-box-page-section">
-        <img id="logo-footer" src="images/logo/meeco-white.svg" alt="logo Meeco blanc"/>
+        <img id="logo-footer" src="./images/logo/meeco-white.svg" alt="logo Meeco blanc"/>
         <ul id="footer-list">
             <li><a href="./cgu/#informations-legales" class="important-link text-footer" target="_blank" area-label="Informations légales" tabindex="0">Informations légales</a></li>
             <li><a href="./cgu/#rgpd" class="important-link text-footer" target="_blank" area-label="Politique de la vie privée" tabindex="0">Politique de la vie privée</a></li>
@@ -292,13 +292,13 @@
     <div class="elfsight-app-912952bd-8b8a-482f-afda-59a444fb572e"></div>  
 </footer>
 <div id="pattern"></div>
-<script src="scripts/scroll.js"></script>
-<script src="scripts/drop-down.js"></script>
-<script src="scripts/faq.js"></script>
-<script src="scripts/reviews.js"></script>
-<script src="scripts/input.js"></script>
-<script src="scripts/menu.js"></script>
-<script src="scripts/resize.js"></script>
+<script src="./scripts/scroll.js"></script>
+<script src="./scripts/drop-down.js"></script>
+<script src="./scripts/faq.js"></script>
+<script src="./scripts/reviews.js"></script>
+<script src="./scripts/input.js"></script>
+<script src="./scripts/menu.js"></script>
+<script src="./scripts/resize.js"></script>
 <script src="https://apps.elfsight.com/p/platform.js" defer></script>
 
 
