--- a/cgu/index.html
+++ b/cgu/index.html
@@ -240,8 +240,7 @@
         <h2 class="text-small-header"><a href="#acces-au-site"><span>Accès au site</span></a></h2>
         <p class="text-min-body">
             <p class="text-min-body">
-                Le site <a href="https://www.meeco.fr" class="text-hyperlink">www.meeco.fr</a> permet à <strong class="text-strong-word">l'Utilisateur</strong> un accès gratuit aux services suivants:<br/> <!-- manque de contenu -->
-                Le site internet propose les services suivants:
+                Le site <a href="https://www.meeco.fr" class="text-hyperlink">www.meeco.fr</a> permet à <strong class="text-strong-word">l'Utilisateur</strong> un accès gratuit aux services suivants:<br/>
             </p>
             <ul class="text-min-body">
                 <li>Mise à disposition d'informations concernant le secteur des énergies,</li>
