--- a/cgu/index.html
+++ b/cgu/index.html
@@ -136,7 +136,7 @@
         <h2 class="text-small-header"><a href="#informations-legales"><span>INFORMATIONS LEGALES</span></a></h2>
         <h3 class="text-card-title">Propriétaire et Editeur du site:</h3>
         <p class="text-min-body">
-            Société SAS <strong class="text-strong-word">Econ'home Energie</strong>  au capital de 5000 euros, immatriculée au <abbr title="Registre du Commerce et des Sociétés" class="text-strong-word">RCS</abbr> de Toulouse sous le numéro <a href="tel:881521454" class="text-hyperlink">881521454</a>, dont le siège social est situé au 5 rue de la palanquette 31830 Plaisance-du-Touch.<br/>
+            Société SAS <strong class="text-strong-word">Econ'home Energie</strong>  au capital de 5000 euros, immatriculée au <abbr title="Registre du Commerce et des Sociétés" class="text-strong-word">RCS</abbr> de Toulouse sous le numéro 881521454, dont le siège social est situé au 5 rue de la palanquette 31830 Plaisance-du-Touch.<br/>
             <strong class="text-strong-word">Numéro de téléphone</strong>: <a href="tel:+33532602342" class="text-hyperlink">0532602342</a><br/>
             <strong class="text-strong-word">Adresse e-mail</strong>: <a href="mailto:contact@meeco.fr" class="text-hyperlink">contact@meeco.fr</a><br/>
             <strong class="text-strong-word">Numéro de TVA intracommunautaire</strong>: FR248815214454
