email template update

--- a/email-template/index.html
+++ b/email-template/index.html
@@ -21,7 +21,7 @@
         <!-- heading -->
         <tr>
             <td align="left" style="padding: 20px;">
-                <h1 style="color: #292966; font-family: Arial, Helvetica, sans-serif; font-size: 30px; line-height: 36px; font-weight: 800; margin: 0 0 20px 0;">
+                <h1 style="color: #292966; font-family: Arial, Helvetica, sans-serif; font-size: 30px; line-height: 36px; font-weight: 800; margin: 0;">
                     La rénovation énergétique de votre foyer n'a jamais été aussi simple
                 </h1>
             </td>
@@ -31,17 +31,22 @@
         <tr>
             <td align="left" style="padding: 20px;">
                 <!-- title -->
-                <h2 style="color: #333333; font-family: Arial, Helvetica, sans-serif; font-size: 26px; line-height: 32px; font-weight: 800; margin: 0 0 20px 0; padding: 0 0 0 20px;">
+                <h2 style="color: #333333; font-family: Arial, Helvetica, sans-serif; font-size: 26px; line-height: 32px; font-weight: 800; margin: 50px 0 0 0; padding: 0 0 0 20px;">
                     Pourquoi Meeco?
                 </h2>
 
                 <!-- paragraph -->
-                <p style="color: #333333; font-family: Georgia, 'Times New Roman', Times, serif; font-weight: 500; font-size: 20px; line-height: 34px; margin: 0 0 20px 0; padding: 0 0 0 40px;">
+                <p style="color: #333333; font-family: Georgia, 'Times New Roman', Times, serif; font-weight: 500; font-size: 20px; line-height: 34px; margin: 20px 0; padding: 0 0 0 40px;">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum aperiam consequuntur nostrum, perferendis ullam officiis aliquid? Culpa pariatur repellat cum! Sit veritatis veniam quas, illo assumenda distinctio mollitia expedita nisi esse, repudiandae aspernatur. A, ratione? Quibusdam minima cumque unde qui incidunt doloribus aliquid sit, corrupti quidem magni neque at! Excepturi accusantium fugit, hic, facilis voluptates facere fuga illum ab sequi ex expedita a consequuntur, reiciendis ullam iste perspiciatis odio nesciunt eius eos. Sed, asperiores sint? Inventore nobis reiciendis repellat, numquam, a ea vel nisi porro architecto non nihil quo cum ullam ipsum minima asperiores. Labore ducimus culpa dolor laudantium nesciunt?
                 </p>
 
+                <!-- body-link -->
+                <a style=" color: #3333ff; font-family: Arial, Helvetica, sans-serif; font-size: 16px; font-weight: 700; padding: 0 0 0 40px;" href="">
+                    En savoir plus
+                </a>
+
                 <!-- title -->
-                <h2 style="color: #333333; font-family: Arial, Helvetica, sans-serif; font-size: 26px; line-height: 32px; font-weight: 800; margin: 0 0 20px 0; padding: 0 0 0 20px;">
+                <h2 style="color: #333333; font-family: Arial, Helvetica, sans-serif; font-size: 26px; line-height: 32px; font-weight: 800; margin: 50px 0 0 0; padding: 0 0 0 20px;">
                     Les services que nous proposons:
                 </h2>
 
@@ -64,7 +69,7 @@
             <td align="center" style="padding: 50px 20px;">
                 <table>
                     <tr><td align="center" style="padding: 10px;"><img src="../images/logo/meeco-white.svg" height="30" alt="Logo Meeco blanc"></td></tr>
-                    <!-- links -->
+                    <!-- footer-link -->
                     <tr><td align="center" style="padding: 10px;"><a style=" color: #ffffff; font-family: Arial, Helvetica, sans-serif; font-size: 16px;" href="">Informations légales</a></td></tr>
                     <tr><td align="center" style="padding: 10px;"><a style=" color: #ffffff; font-family: Arial, Helvetica, sans-serif; font-size: 16px;" href="">Politique de la vie privée</a></td></tr>
                     <tr><td align="center" style="padding: 10px;"><a style=" color: #ffffff; font-family: Arial, Helvetica, sans-serif; font-size: 16px;" href="">Nous contacter</a></td></tr>
