--- a/email-template/index.html
+++ b/email-template/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Type" content="text/html charset=UTF-8"/>
     <title>Meeco</title>
 </head>
 <body style="margin: 0;">
@@ -51,17 +52,17 @@
                 </h2>
 
                 <!-- list -->
-                <ul style="color: #333333; font-family: Georgia, 'Times New Roman', Times, serif; font-weight: 500; font-size: 20px; line-height: 34px; margin: 0 0 20px 0; padding: 0 0 0 40px; list-style-type: square;">
-                    <li>Isolation des maisons</li>
-                    <li>Chauffage</li>
-                    <li>Panneaux solaires</li>
-                </ul>
+                <p style="color: #333333; font-family: Georgia, 'Times New Roman', Times, serif; font-weight: 500; font-size: 20px; line-height: 34px; margin: 20px 0; padding: 0 0 0 40px; list-style-type: square;">
+                    &FilledSmallSquare; Isolation des maisons<br/>
+                    &FilledSmallSquare; Chauffage<br/>
+                    &FilledSmallSquare; Panneaux solaires
+                </p>
             </td>
         </tr>
 
         <!-- cta-button -->
         <tr>
-            <td align="center" style="padding: 20px 0 50px 0;"><a href="" style="color: #ffffff; background-color: #ff5533; text-decoration: none; font-family: Arial, Helvetica, sans-serif; font-size: 20px; line-height: 42px; font-weight: 700; padding: 10px 20px; border-radius: 20px;">Réaliser mon project</a></td>
+            <td align="center" style="padding: 20px 0 50px 0;"><a href="" style="color: #ffffff; background-color: #ff5533; text-decoration: none; font-family: Arial, Helvetica, sans-serif; font-size: 20px; line-height: 42px; font-weight: 700; padding: 10px 20px; border-radius: 30px;">Réaliser mon project</a></td>
         </tr>
 
         <!-- footer -->
@@ -74,6 +75,7 @@
                     <tr><td align="center" style="padding: 10px;"><a style=" color: #ffffff; font-family: Arial, Helvetica, sans-serif; font-size: 16px;" href="">Politique de la vie privée</a></td></tr>
                     <tr><td align="center" style="padding: 10px;"><a style=" color: #ffffff; font-family: Arial, Helvetica, sans-serif; font-size: 16px;" href="">Nous contacter</a></td></tr>
                     <tr><td align="center" style="padding: 10px;"><a style=" color: #ffffff; font-family: Arial, Helvetica, sans-serif; font-size: 16px;" href="">Se désabonner</a></td></tr>
+                    <tr><td align="center" style="padding: 10px; color: #ffffff; font-family: Arial, Helvetica, sans-serif; font-size: 16px;">Copyright &copy;2021 <a style="color: #ffffff; font-family: Arial, Helvetica, sans-serif; font-size: 16px;" href="https://solusaas.com">SOLUSAAS</a></td></tr>
                 </table>
             </td>
         </tr>
