floating-phone 1st commit

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/nav(830).css">
     <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/floating-phone.css">
     <link rel="stylesheet" href="css/home-main.css">
     <link rel="stylesheet" href="css/home-main(830).css">
     <link rel="stylesheet" href="css/home-main(1100).css">
@@ -291,6 +292,15 @@
     </div>
     <div class="elfsight-app-912952bd-8b8a-482f-afda-59a444fb572e"></div>  
 </footer>
+<div id="floating-phone">
+    <div id="floating-phone-card">
+        <div id="floating-phone-card-image"></div>
+        <span id="floating-phone-card-title">Service client Meeco</span>
+        <span id="floating-phone-card-sub-title">Disponible 12H/7J</span>
+        <a id="floating-phone-card-number" href="tel:+33612345678">+33 612 34 56 78</a>
+    </div>
+    <div id="floating-phone-icon" onclick="toggle_floating_phone()"></div>
+</div>
 <div id="pattern"></div>
 <script src="./scripts/scroll.js"></script>
 <script src="./scripts/drop-down.js"></script>
@@ -299,6 +309,7 @@
 <script src="./scripts/input.js"></script>
 <script src="./scripts/menu.js"></script>
 <script src="./scripts/resize.js"></script>
+<script src="./scripts/floating-phone.js"></script>
 <script src="https://apps.elfsight.com/p/platform.js" defer></script>
 
 
