--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../css/colors.css">
     <link rel="stylesheet" href="../css/nav.css">
     <link rel="stylesheet" href="../css/buttons.css">
+    <link rel="stylesheet" href="../css/floating-phone.css">
     <link rel="stylesheet" href="../css/input.css">
     <link rel="stylesheet" href="../css/app-main.css">
     <link rel="stylesheet" href="../css/app-main(860).css">
@@ -84,18 +85,23 @@
         </div>
     </div>
 </section>
-<div class="elfsight-app-912952bd-8b8a-482f-afda-59a444fb572e"></div>
 <div id="progress-bar">
     <div id="progress" data-progress="0"></div>
 </div>
-
+<div id="floating-phone">
+    <div id="floating-phone-card">
+        <div id="floating-phone-card-image"></div>
+        <span id="floating-phone-card-title">Service client Meeco</span>
+        <span id="floating-phone-card-sub-title">Disponible 12H/7J</span>
+        <a id="floating-phone-card-number" href="tel:+33612345678">+33 612 34 56 78</a>
+    </div>
+    <div id="floating-phone-icon" onclick="toggle_floating_phone()"></div>
+</div>
 </body>
 <script src="../scripts/update.js"></script>
 <script src="../scripts/input.js"></script>
 <script src="../scripts/pop-up.js"></script>
 <script src="../scripts/cancel-app.js"></script>
 <script src="../scripts/close-app.js"></script>
-<script src="https://apps.elfsight.com/p/platform.js" defer></script>
-
-
+<script src="../scripts/floating-phone.js"></script>
 </html>
