--- a/contact/index.html
+++ b/contact/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../css/buttons.css">
     <link rel="stylesheet" href="../css/input.css">
     <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="../css/floating-phone.css">
     <link rel="stylesheet" href="../css/nav.css">
     <link rel="stylesheet" href="../css/nav(830).css">
     <link rel="stylesheet" href="../css/sections.css">
@@ -176,13 +177,20 @@
         </ul>
         <small id="copyright-notice" class="text-footer">Copyright &copy;2021 <a href="https://solusaas.com" target="_blank" area-label="solusaas" tabindex="0">SOLUSAAS</a></small>
     </div>
-    <div class="elfsight-app-912952bd-8b8a-482f-afda-59a444fb572e"></div>
 </footer>
+<div id="floating-phone">
+    <div id="floating-phone-card">
+        <div id="floating-phone-card-image"></div>
+        <span id="floating-phone-card-title">Service client Meeco</span>
+        <span id="floating-phone-card-sub-title">Disponible 12H/7J</span>
+        <a id="floating-phone-card-number" href="tel:+33612345678">+33 612 34 56 78</a>
+    </div>
+    <div id="floating-phone-icon" onclick="toggle_floating_phone()"></div>
+</div>
 <script src="../scripts/scroll.js"></script>
 <script src="../scripts/drop-down.js"></script>
 <script src="../scripts/menu.js"></script>
 <script src="../scripts/resize.js"></script>
-<script src="https://apps.elfsight.com/p/platform.js" defer></script>
-
+<script src="../scripts/floating-phone.js"></script>
 </body>
 </html>
