footer links update

--- a/cgu/index.html
+++ b/cgu/index.html
@@ -267,7 +267,7 @@
         <ul id="footer-list">
             <li><a href="#informations-legales" class="important-link text-footer" area-label="Informations légales" tabindex="0">Informations légales</a></li>
             <li><a href="#rgpd" class="important-link text-footer" area-label="Politique de la vie privée" tabindex="0">Politique de la vie privée</a></li>
-            <li><a href="../about/" class="important-link text-footer" target="_blank" area-label="Qui sommes nous?" tabindex="0">Qui sommes nous?</a></li>
+            <li><a href="#" class="important-link text-footer" target="_blank" area-label="Conditions d'utilisation" tabindex="0">Conditions d'utilisation</a></li>
             <li><a href="../contact/" class="important-link text-footer" target="_blank" area-label="Nous contacter" tabindex="0">Nous contacter</a></li>
         </ul>
         <small id="copyright-notice" class="text-footer">Copyright &copy;2021 <a href="https://solusaas.com" target="_blank" area-label="solusaas" tabindex="0">SOLUSAAS</a></small>
