--- a/about/index.html
+++ b/about/index.html
@@ -124,7 +124,7 @@
 </nav>
 <section id="conviction-section" class="page-section" tabindex="0">
     <div id="content-box-conviction" class="content-box-page-section">
-        <h2 id="conviction-title" class="text-small-header section-title">MEECO BY Econ'home :</h2>
+        <h2 id="conviction-title" class="text-small-header section-title">Meeco BY Econ'home</h2>
         <div id="vision-body">
             <blockquote style="width: 1040px;" id="section-quote-vision" class="section-quote text-big-body">
 
@@ -184,7 +184,7 @@
         <ul id="footer-list">
             <li><a href="../cgu/#informations-legales" class="important-link text-footer" target="_blank" area-label="informations légales" tabindex="0">Informations légales</a></li>
             <li><a href="../cgu/#rgpd" class="important-link text-footer" target="_blank" area-label="Politique de la vie privée" tabindex="0">Politique de la vie privée</a></li>
-            <li><a href="../about/" class="important-link text-footer" target="_blank" area-label="Qui sommes nous?" tabindex="0">Qui sommes nous?</a></li>
+            <li><a href="../cgu/" class="important-link text-footer" target="_blank" area-label="Conditions d'utilisation" tabindex="0">Conditions d'utilisation</a></li>
             <li><a href="../contact/" class="important-link text-footer" target="_blank" area-label="Nous contacter" tabindex="0">Nous contacter</a></li>
         </ul>
         <small id="copyright-notice" class="text-footer">Copyright &copy;2021 <a href="https://solusaas.com" target="_blank" area-label="solusaas" tabindex="0">SOLUSAAS</a></small>
