--- a/app/app-28.html
+++ b/app/app-28.html
@@ -19,7 +19,7 @@
             <div class="input-box input-check-box">
                 <input type="checkbox" name="politique-confidentialite" id="user-check-input" class="text-input input input-check" value="refusee" required oninput="input_validation_check_box(this); update_app(this)">
                 <span class="check-box-custom"></span>
-                <label id="user-check-input-label" for="user-check-input" class="text-label input-label">J'ai lu et j'accepte <a class="text-hyperlink" href="#" target="_blank">la politique de confidentialité</a><span class="required-asterisk">*</span></label>
+                <label id="user-check-input-label" for="user-check-input" class="text-label input-label">J'ai lu et j'accepte <a class="text-hyperlink" href="../cgu/#rgpd" target="_blank">la politique de la vie privée</a><span class="required-asterisk">*</span></label>
             </div>
         </form>
     </ul>
