--- a/app/app-29.html
+++ b/app/app-29.html
@@ -23,7 +23,7 @@
                 <button class="text-button button button-primary-normal-private pop-up-button" id="pop-up-button-top" onclick="toggle_pop_up()">Je souhaite d'être contacté(e)</button>
                 <button class="text-button button button-secondary-special pop-up-button" id="pop-up-button-bottom" onclick="toggle_pop_up(); cancel_app(31); save_clear_localStorage()">J'ai compris et je veux annuler ma demande</button>
             </div>
-            <p class="pop-up-note text-label">Veuillez noter que nous disposons de vos données malgré l'annulation du contact. <a href="#" target="_blank" class="text-hyperlink">En savoir plus</a></p>
+            <p class="pop-up-note text-label">Veuillez noter que nous disposons de vos données malgré l'annulation du contact. <a href="../cgu/#rgpd" target="_blank" class="text-hyperlink">En savoir plus</a></p>
         </div>
     </div>
 </div>
