--- a/cgu/index.html
+++ b/cgu/index.html
@@ -113,7 +113,7 @@
                     </ul>
                 </li>
                 <li id="about" class="nav-item">
-                    <a id="about-link" class="text-clickable link" href="../about/" target="_blank" tabindex="0" aria-label="Qui sommes nous?" onfocus="drop_down_services_out()">Qui sommes nous?</a>
+                    <a id="about-link" class="text-clickable link" href="../about/" tabindex="0" aria-label="Qui sommes nous?" onfocus="drop_down_services_out()">Qui sommes nous?</a>
                 </li>
                 <li id="cta-nav" class="nav-item">
                     <a id="cta-nav-link" class="text-button button button-primary-special-private" href="../app/" target="_blank" aria-label="Réaliser mon projet" tabindex="0">Réaliser mon projet</a>
@@ -267,8 +267,8 @@
         <ul id="footer-list">
             <li><a href="#informations-legales" class="important-link text-footer" area-label="Informations légales" tabindex="0">Informations légales</a></li>
             <li><a href="#rgpd" class="important-link text-footer" area-label="Politique de la vie privée" tabindex="0">Politique de la vie privée</a></li>
-            <li><a href="#" class="important-link text-footer" target="_blank" area-label="Conditions d'utilisation" tabindex="0">Conditions d'utilisation</a></li>
-            <li><a href="../contact/" class="important-link text-footer" target="_blank" area-label="Nous contacter" tabindex="0">Nous contacter</a></li>
+            <li><a href="#" class="important-link text-footer" area-label="Conditions d'utilisation" tabindex="0">Conditions d'utilisation</a></li>
+            <li><a href="../contact/" class="important-link text-footer" area-label="Nous contacter" tabindex="0">Nous contacter</a></li>
         </ul>
         <small id="copyright-notice" class="text-footer">Copyright &copy;2021 <a href="https://solusaas.com" target="_blank" area-label="solusaas" tabindex="0">SOLUSAAS</a></small>
     </div>
