--- a/contact/index.html
+++ b/contact/index.html
@@ -113,7 +113,7 @@
                     </ul>
                 </li>
                 <li id="about" class="nav-item">
-                    <a id="about-link" class="text-clickable link" href="../about/" target="_blank" tabindex="0" aria-label="Qui sommes nous?" onfocus="drop_down_services_out()">Qui sommes nous?</a>
+                    <a id="about-link" class="text-clickable link" href="../about/" tabindex="0" aria-label="Qui sommes nous?" onfocus="drop_down_services_out()">Qui sommes nous?</a>
                 </li>
                 <li id="cta-nav" class="nav-item">
                     <a id="cta-nav-link" class="text-button button button-primary-special-private" href="../app/" target="_blank" aria-label="Réaliser mon projet" tabindex="0">Réaliser mon projet</a>
@@ -145,7 +145,7 @@
                 <div class="input-box input-check-box">
                     <input type="checkbox" name="politique-confidentialite" id="user-check-input" class="text-input input input-check" value="refusee" required>
                     <span class="check-box-custom"></span>
-                    <label id="user-check-input-label" for="user-check-input" class="text-label input-label">J'ai lu et j'accepte <a class="text-hyperlink" href="#" target="_blank">la politique de confidentialité</a><span class="required-asterisk">*</span></label>
+                    <label id="user-check-input-label" for="user-check-input" class="text-label input-label">J'ai lu et j'accepte <a class="text-hyperlink" href="../cgu/#rgpd">la politique de la vie privée</a><span class="required-asterisk">*</span></label>
                 </div>
                 <div id="contact-form-submit-box"><input type="submit" id="contact-form-submit" value="Envoyer" class="text-button button button-primary-special-private" tabindex="0" aria-label="Envoyer"></div>
             </form>
@@ -170,10 +170,10 @@
     <div id="content-box-footer" class="content-box-page-section">
         <img id="logo-footer" src="../images/logo/meeco-white.svg" alt="logo Meeco blanc"/>
         <ul id="footer-list">
-            <li><a href="../cgu/#informations-legales" class="important-link text-footer" target="_blank" area-label="informations légales" tabindex="0">Informations légales</a></li>
-            <li><a href="../cgu/#rgpd" class="important-link text-footer" target="_blank" area-label="Politique de la vie privée" tabindex="0">Politique de la vie privée</a></li>
-            <li><a href="../cgu/" class="important-link text-footer" target="_blank" area-label="Conditions d'utilisation" tabindex="0">Conditions d'utilisation</a></li>
-            <li><a href="../contact/" class="important-link text-footer" target="_blank" area-label="Nous contacter" tabindex="0">Nous contacter</a></li>
+            <li><a href="../cgu/#informations-legales" class="important-link text-footer" area-label="informations légales" tabindex="0">Informations légales</a></li>
+            <li><a href="../cgu/#rgpd" class="important-link text-footer" area-label="Politique de la vie privée" tabindex="0">Politique de la vie privée</a></li>
+            <li><a href="../cgu/" class="important-link text-footer" area-label="Conditions d'utilisation" tabindex="0">Conditions d'utilisation</a></li>
+            <li><a href="../contact/" class="important-link text-footer" area-label="Nous contacter" tabindex="0">Nous contacter</a></li>
         </ul>
         <small id="copyright-notice" class="text-footer">Copyright &copy;2021 <a href="https://solusaas.com" target="_blank" area-label="solusaas" tabindex="0">SOLUSAAS</a></small>
     </div>
