--- a/energie/index.html
+++ b/energie/index.html
@@ -126,11 +126,12 @@
 <section id="energie-section" class="page-section" tabindex="0">
         <div id="content-box-energie" class="content-box-page-section">
             <div id="energie-body" class="section-body">
-                <h1 id="energie-title" class="text-big-header section-title">Un energie plus efficace et moins énergivore</h1>
-                <p id="section-description-energie" class="text-big-body section-description">L’autoconsommation, c’est la production de sa propre électricité en installant des panneaux solaires photovoltaïques chez soi. Cette technologie permet de faire des économies d’énergie quotidiennement, avec zéro pollution. 
-                    Elle est une solution proposée pour répondre au problème de grosses factures électriques et contribue à gagner en indépendance vis à vis du réseau. 
-                    
-                    </p>
+                <h1 id="energie-title" class="text-big-header section-title">Désirez-vous réduire votre facture d’électricité de 50% ?</h1>
+                <p id="section-description-energie" class="text-big-body section-description">Si oui, alors vous devriez opter pour l’autoconsommation !</p>
+                <p id="section-description-energie" class="text-big-body section-description">Pour produire votre propre électricité, Grâce à la précieuse ressource que nous offre la nature, le soleil 🌞 !</p>
+                <p id="section-description-energie" class="text-big-body section-description">Cette technologie permet de faire des économies d’énergie quotidiennement, avec zéro pollution 🌍. </p>
+                <p id="section-description-energie" class="text-big-body section-description">Comme vous participez à la transition écologique, alors l'État pourrait vous financer son installation.</p>
+                <h2 style="font-size: x-large; " id="chauffage-title" class="text-big-header section-title">Mais pour le savoir, il faut faire ce test simple et rapide.</h2>
                 <a id="cta-energie" href="../app/?service=energie" class="text-button button button-primary-special-private section-cta">Installer des panneaux solaires</a>
             </div>
             <span class="section-image" id="section-image-energie"></span>
